fix spacing in initializeSkecthScreen()

--- a/style.css
+++ b/style.css
@@ -8,8 +8,15 @@
 
 #sketch-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1px;
+}
+
+.pixel-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: nowrap;
 }
